tests/ui/from-backtrace-backtrace.stderr
error: deriving From requires no fields other than source and backtrace
  --> tests/ui/from-backtrace-backtrace.rs:10:18
   |
10 | pub struct Error(#[from] #[backtrace] core2::io::Error, Backtrace);
   |                  ^^^^^^^
